F&GDEV/src/objects/Project__c.object
<CustomObject>
    <description>Object utilized for Product Development efforts</description>
    <fields>
        <fullName>ATI_Approved__c</fullName>
        <label>ATI Approved</label>
        <summaryFilterItems>
            <field>Document_Approval__c.Type__c</field>
            <operation>equals</operation>
            <value>ATI - Life, ATI - Annuity</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Document_Approval__c.Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>Document_Approval__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ATI_Number__c</fullName>
        <externalId>true</externalId>
        <label>ATI Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ATI_Text__c</fullName>
        <label>ATI Text</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessment_Description__c</fullName>
        <label>Assessment Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Assessment_Due_Date__c</fullName>
        <label>Assessment Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assessment_Start_Date__c</fullName>
        <label>Assessment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bill_Code_Prefix__c</fullName>
        <label>Bill Code Prefix</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>G</fullName>
                </value>
                <value>
                    <fullName>I</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bill_Code__c</fullName>
        <externalId>true</externalId>
        <label>Bill Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Priority__c</fullName>
        <label>Channel Priority</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>L</fullName>
                </value>
                <value>
                    <fullName>V</fullName>
                </value>
                <value>
                    <fullName>X</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closed_Subprojects__c</fullName>
        <label>Closed Subprojects</label>
        <summaryFilterItems>
            <field>Subproject__c.Subproject_Close_Date__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Subproject__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Americom</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>F&amp;G</fullName>
                </value>
                <value>
                    <fullName>F&amp;G &amp; Americom</fullName>
                </value>
                <value>
                    <fullName>F&amp;G F&amp;GNY Americom</fullName>
                </value>
                <value>
                    <fullName>F&amp;G Life</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>F&amp;G Life Americom</fullName>
                </value>
                <value>
                    <fullName>F&amp;G Life/F&amp;G Life NY</fullName>
                </value>
                <value>
                    <fullName>F&amp;G NY</fullName>
                </value>
                <value>
                    <fullName>F&amp;G, F&amp;G NY, Americom</fullName>
                </value>
                <value>
                    <fullName>F&amp;G, F&amp;GNY</fullName>
                </value>
                <value>
                    <fullName>F&amp;G/Americom</fullName>
                </value>
                <value>
                    <fullName>F&amp;G/F&amp;G NY</fullName>
                </value>
                <value>
                    <fullName>FGNY/TJ</fullName>
                </value>
                <value>
                    <fullName>OMF</fullName>
                </value>
                <value>
                    <fullName>OMF OMFNY</fullName>
                </value>
                <value>
                    <fullName>OMFL</fullName>
                </value>
                <value>
                    <fullName>OMFLIC</fullName>
                </value>
                <value>
                    <fullName>OMFLIC NY</fullName>
                </value>
                <value>
                    <fullName>OMFLIC OMFLICNY</fullName>
                </value>
                <value>
                    <fullName>OMFLNY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Concept_Proposed__c</fullName>
        <label>Concept Proposed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Confirmed_Day_1_Target_Date__c</fullName>
        <label>Confirmed Day 1 Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Day_1_Target_Date__c</fullName>
        <label>Current Day 1 Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Day_1_Complete_Date__c</fullName>
        <label>Day 1 Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Day_2_Complete_Date__c</fullName>
        <label>Day 2 Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feasibility_Comments__c</fullName>
        <label>Feasibility Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Feasibility_Complete_Date__c</fullName>
        <label>Feasibility Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feasibility_Priority__c</fullName>
        <label>Feasibility Priority</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feasibility_Start_Date__c</fullName>
        <label>Feasibility Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feasibility_Status_Comment__c</fullName>
        <label>Feasibility Status Comment</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feasibility_Status__c</fullName>
        <label>Feasibility Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Blue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Filing_Priority__c</fullName>
        <label>Filing Priority</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Filing_Status_Comments__c</fullName>
        <label>Filing Status Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Filing_Status__c</fullName>
        <label>Filing Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Filing Required</fullName>
                </value>
                <value>
                    <fullName>Filing Required</fullName>
                </value>
                <value>
                    <fullName>Filing In Progress</fullName>
                </value>
                <value>
                    <fullName>Filing Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Implementation_Comments__c</fullName>
        <label>Implementation Comments</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Implementation_Start_Date__c</fullName>
        <label>Implementation Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Status_Comment__c</fullName>
        <label>Implementation Status Comment</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Implementation_Status__c</fullName>
        <label>Implementation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Blue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initial_PM_Tasks_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Back end field to capture whether or not PM tasks have generated, so that tasks are not re-generated if project is re-assigned.</description>
        <label>Initial PM Tasks Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_PD_Database_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy PD Database ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Marketing_Launch_Date__c</fullName>
        <label>Marketing Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mkt_Launch_Status_Comment__c</fullName>
        <label>Mkt Launch Status Comment</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mkt_Launch_Status__c</fullName>
        <label>Mkt Launch Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Blue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Risk__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Open_Subprojects__c</fullName>
        <label>Open Subprojects</label>
        <summaryFilterItems>
            <field>Subproject__c.Subproject_Close_Date__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Subproject__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Pricing_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pricing Resource</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Bill_Code_ATI__c</fullName>
        <formula>Name &amp; &quot; - &quot; &amp;  Bill_Code__c &amp; &quot; - &quot; &amp;  TEXT(ATI_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Bill Code ATI</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Category__c</fullName>
        <label>Project Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Product Development</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Product Development Admin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <label>Project Manager (Legacy)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Phase__c</fullName>
        <label>Project Phase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Assessment</fullName>
                </value>
                <value>
                    <fullName>ATI Pending</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Concept</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Feasibility</fullName>
                </value>
                <value>
                    <fullName>Implementation - Day 1</fullName>
                </value>
                <value>
                    <fullName>Implementation - Day 2</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Subcategory__c</fullName>
        <label>Project Subcategory</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Conservation</fullName>
                </value>
                <value>
                    <fullName>Large Case</fullName>
                </value>
                <value>
                    <fullName>Migration</fullName>
                </value>
                <value>
                    <fullName>Pull Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Summary__c</fullName>
        <label>Project Summary</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Termination_Date__c</fullName>
        <label>Project Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Termination_Reason__c</fullName>
        <label>Project Termination Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sample</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <label>Project Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enhancement</fullName>
                </value>
                <value>
                    <fullName>New Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pulled_from_Feasibility_Date__c</fullName>
        <label>Pulled from Feasibility Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_ATI_No__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request ATI No</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Bill_Code__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request Bill Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requested_Day_1_Complete_Date__c</fullName>
        <label>Requested Day 1 Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revised_Implementation_Date__c</fullName>
        <label>Revised Implementation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Secondary_Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TPA_Project_Manager_Legacy__c</fullName>
        <label>TPA Project Manager (Legacy)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPA_Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TPA Project Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projects (TPA Project Manager Contact)</relationshipLabel>
        <relationshipName>Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TPA__c</fullName>
        <label>TPA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NTT</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>CIS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>Active_Filing_Proj_Annuity_In_Pipeline</fullName>
        <columns>Filing_Priority__c</columns>
        <columns>NAME</columns>
        <columns>Filing_Status_Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Filing_Status__c</field>
            <operation>equals</operation>
            <value>Filing Required</value>
        </filters>
        <filters>
            <field>Channel__c</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>Active Filing Proj-Annuity-In Pipeline</label>
    </listViews>
    <listViews>
        <fullName>Active_Filing_Proj_Annuity_In_Progress</fullName>
        <columns>Filing_Priority__c</columns>
        <columns>NAME</columns>
        <columns>Filing_Status_Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Filing_Status__c</field>
            <operation>equals</operation>
            <value>Filing In Progress</value>
        </filters>
        <filters>
            <field>Channel__c</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>Active Filing Proj-Annuity-In Progress</label>
    </listViews>
    <listViews>
        <fullName>Active_Filing_Projects_Life_InPipeline</fullName>
        <columns>Filing_Priority__c</columns>
        <columns>NAME</columns>
        <columns>Filing_Status_Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Filing_Status__c</field>
            <operation>equals</operation>
            <value>Filing Required</value>
        </filters>
        <filters>
            <field>Channel__c</field>
            <operation>equals</operation>
            <value>L,X</value>
        </filters>
        <label>Active Filing Proj - Life - In Pipeline</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Bill_Code__c</columns>
        <columns>ATI_Number__c</columns>
        <columns>Project_Phase__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_ATIs</fullName>
        <columns>ATI_Number__c</columns>
        <columns>Bill_Code__c</columns>
        <columns>NAME</columns>
        <columns>Project_Phase__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ATI_Number__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All ATIs</label>
    </listViews>
    <listViews>
        <fullName>All_Active</fullName>
        <booleanFilter>(1 OR 2 )</booleanFilter>
        <columns>NAME</columns>
        <columns>Bill_Code__c</columns>
        <columns>ATI_Number__c</columns>
        <columns>Project_Phase__c</columns>
        <columns>Current_Day_1_Target_Date__c</columns>
        <columns>Feasibility_Status__c</columns>
        <columns>Feasibility_Status_Comment__c</columns>
        <columns>Implementation_Status__c</columns>
        <columns>Implementation_Comments__c</columns>
        <columns>Mkt_Launch_Status__c</columns>
        <columns>Mkt_Launch_Status_Comment__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Phase__c</field>
            <operation>equals</operation>
            <value>Implementation - Day 1,Assessment,Feasibility,Implementation - Day 2</value>
        </filters>
        <filters>
            <field>Project_Phase__c</field>
            <operation>equals</operation>
            <value>ATI Pending</value>
        </filters>
        <label>All Active</label>
    </listViews>
    <listViews>
        <fullName>All_Active_nongreen</fullName>
        <booleanFilter>(1 OR 2 ) and (3 or 4 or 5)</booleanFilter>
        <columns>NAME</columns>
        <columns>Bill_Code__c</columns>
        <columns>ATI_Number__c</columns>
        <columns>Project_Phase__c</columns>
        <columns>Current_Day_1_Target_Date__c</columns>
        <columns>Feasibility_Status__c</columns>
        <columns>Feasibility_Status_Comment__c</columns>
        <columns>Implementation_Status__c</columns>
        <columns>Implementation_Comments__c</columns>
        <columns>Mkt_Launch_Status__c</columns>
        <columns>Mkt_Launch_Status_Comment__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Phase__c</field>
            <operation>equals</operation>
            <value>Implementation - Day 1,Assessment,Feasibility,Implementation - Day 2</value>
        </filters>
        <filters>
            <field>Project_Phase__c</field>
            <operation>equals</operation>
            <value>ATI Pending</value>
        </filters>
        <filters>
            <field>Feasibility_Status__c</field>
            <operation>equals</operation>
            <value>Yellow,Red</value>
        </filters>
        <filters>
            <field>Implementation_Status__c</field>
            <operation>equals</operation>
            <value>Yellow,Red</value>
        </filters>
        <filters>
            <field>Mkt_Launch_Status__c</field>
            <operation>equals</operation>
            <value>Yellow,Red</value>
        </filters>
        <label>All Active - Non-Green</label>
    </listViews>
    <listViews>
        <fullName>All_Bill_Codes</fullName>
        <columns>ATI_Number__c</columns>
        <columns>Bill_Code__c</columns>
        <columns>NAME</columns>
        <columns>Project_Phase__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Project_Category__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Bill_Code__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All Bill Codes</label>
    </listViews>
    <listViews>
        <fullName>Closed_2014</fullName>
        <columns>NAME</columns>
        <columns>Bill_Code__c</columns>
        <columns>ATI_Number__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Project_Termination_Date__c</columns>
        <columns>Project_Termination_Reason__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Termination_Date__c</field>
            <operation>lessThan</operation>
            <value>1/1/2015</value>
        </filters>
        <filters>
            <field>Project_Termination_Date__c</field>
            <operation>greaterThan</operation>
            <value>12/31/2013</value>
        </filters>
        <label>Closed 2014</label>
    </listViews>
    <listViews>
        <fullName>Completed_Withdrawn</fullName>
        <columns>NAME</columns>
        <columns>Project_Phase__c</columns>
        <columns>Project_Summary__c</columns>
        <columns>Project_Category__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Project_Subcategory__c</columns>
        <columns>Project_Termination_Date__c</columns>
        <columns>Project_Termination_Reason__c</columns>
        <columns>Project_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Phase__c</field>
            <operation>equals</operation>
            <value>Completed,Withdrawn</value>
        </filters>
        <label>Completed/Withdrawn</label>
    </listViews>
    <listViews>
        <fullName>Compliance_Projects</fullName>
        <columns>NAME</columns>
        <columns>Bill_Code__c</columns>
        <columns>ATI_Number__c</columns>
        <columns>Project_Phase__c</columns>
        <columns>Project_Category__c</columns>
        <columns>Project_Type__c</columns>
        <columns>Project_Summary__c</columns>
        <columns>Feasibility_Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Phase__c</field>
            <operation>equals</operation>
            <value>Concept,Assessment,Feasibility,ATI Pending</value>
        </filters>
        <filters>
            <field>Project_Category__c</field>
            <operation>equals</operation>
            <value>Compliance</value>
        </filters>
        <label>Compliance Projects</label>
    </listViews>
    <listViews>
        <fullName>Concept_Annuity</fullName>
        <columns>NAME</columns>
        <columns>Feasibility_Priority__c</columns>
        <columns>Feasibility_Comments__c</columns>
        <columns>Feasibility_Status__c</columns>
        <columns>Feasibility_Status_Comment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Phase__c</field>
            <operation>equals</operation>
            <value>Concept</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>1/1/2018 12:00 AM</value>
        </filters>
        <filters>
            <field>Channel__c</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project__c.Project</value>
        </filters>
        <filters>
            <field>Project_Category__c</field>
            <operation>equals</operation>
            <value>Product Development</value>
        </filters>
        <label>Concept - Annuity</label>
    </listViews>
    <listViews>
        <fullName>Feasibility</fullName>
        <booleanFilter>((1 AND 2 AND 3) OR 4) and 5</booleanFilter>
        <columns>NAME</columns>
        <columns>Feasibility_Status__c</columns>
        <columns>Feasibility_Status_Comment__c</columns>
        <columns>Feasibility_Priority__c</columns>
        <columns>Feasibility_Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Feasibility_Start_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Feasibility_Complete_Date__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Pulled_from_Feasibility_Date__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Project_Phase__c</field>
            <operation>equals</operation>
            <value>Feasibility</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>1/1/2018 12:00 AM</value>
        </filters>
        <label>Feasibility</label>
    </listViews>
    <listViews>
        <fullName>Feasibility_Annuity</fullName>
        <columns>NAME</columns>
        <columns>Feasibility_Priority__c</columns>
        <columns>Current_Day_1_Target_Date__c</columns>
        <columns>Feasibility_Comments__c</columns>
        <columns>Feasibility_Status__c</columns>
        <columns>Feasibility_Status_Comment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Phase__c</field>
            <operation>equals</operation>
            <value>Feasibility</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>1/1/2018 12:00 AM</value>
        </filters>
        <filters>
            <field>Channel__c</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project__c.Project</value>
        </filters>
        <label>Feasibility - Annuity</label>
    </listViews>
    <listViews>
        <fullName>Feasibility_Life</fullName>
        <columns>NAME</columns>
        <columns>Feasibility_Priority__c</columns>
        <columns>Current_Day_1_Target_Date__c</columns>
        <columns>Feasibility_Comments__c</columns>
        <columns>Feasibility_Status__c</columns>
        <columns>Feasibility_Status_Comment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Phase__c</field>
            <operation>equals</operation>
            <value>Feasibility</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>1/1/2018 12:00 AM</value>
        </filters>
        <filters>
            <field>Channel__c</field>
            <operation>equals</operation>
            <value>L</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project__c.Project</value>
        </filters>
        <label>Feasibility - Life</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <recordTypes>
        <fullName>PD_Ops_Project</fullName>
        <active>true</active>
        <description>For product development operations only.</description>
        <label>PD Ops Project</label>
    </recordTypes>
    <recordTypes>
        <fullName>Project</fullName>
        <active>true</active>
        <label>Project</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Bill_Code_Prefix_Must_Be_Selected</fullName>
        <active>true</active>
        <errorConditionFormula>and(Request_Bill_Code__c,ispickval(Bill_Code_Prefix__c,&quot;&quot;))</errorConditionFormula>
        <errorDisplayField>Bill_Code_Prefix__c</errorDisplayField>
        <errorMessage>You must select a Bill Code Prefix in order to request a Bill Code.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Request_ATI_Checkbox</fullName>
        <active>true</active>
        <errorConditionFormula>and(ischanged( Request_ATI_No__c ),

Request_ATI_No__c =False)</errorConditionFormula>
        <errorDisplayField>Request_ATI_No__c</errorDisplayField>
        <errorMessage>You Cannot Deselect This Checkbox.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Request_Bill_Code_Checkbox</fullName>
        <active>true</active>
        <errorConditionFormula>and(ischanged(Request_Bill_Code__c ),

Request_Bill_Code__c=False)</errorConditionFormula>
        <errorDisplayField>Request_Bill_Code__c</errorDisplayField>
        <errorMessage>You Cannot Deselect This Checkbox.</errorMessage>
    </validationRules>
</CustomObject>